Joshua: Added DB from Somee.com

--- a/SISv3/Web.config
+++ b/SISv3/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,9 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SISv3-20171020092252.mdf;Initial Catalog=aspnet-SISv3-20171020092252;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SISv3-20171020092252.mdf;Initial Catalog=aspnet-SISv3-20171020092252;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="SISv3dBEntities" connectionString="metadata=res://*/Models.SISv3Model.csdl|res://*/Models.SISv3Model.ssdl|res://*/Models.SISv3Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SISv3dB.mssql.somee.com;initial catalog=SISv3dB;persist security info=True;user id=sisv3;password=Aa@1234567;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
