log in, email confirmation and password reset by weilotk

--- a/SISv3/Web.config
+++ b/SISv3/Web.config
@@ -9,13 +9,22 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SISv3-20171020092252.mdf;Initial Catalog=aspnet-SISv3-20171020092252;Integrated Security=True" providerName="System.Data.SqlClient" />
+    
+    <add name="DefaultConnection" connectionString="Data Source=SISv3dB.mssql.somee.com;Initial Catalog=SISv3dB;User id=sisv3 ; Password=Aa@1234567;" providerName="System.Data.SqlClient" />
   <add name="SISv3dBEntities" connectionString="metadata=res://*/Models.SISv3Model.csdl|res://*/Models.SISv3Model.ssdl|res://*/Models.SISv3Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SISv3dB.mssql.somee.com;initial catalog=SISv3dB;persist security info=True;user id=sisv3;password=Aa@1234567;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="adminUserName" value="esample512@gmail.com" />
+    <add key="password" value="1234qwer12" />
+    <add key="mailAccount" value="esample512@gmail.com" />
+    <add key="mailAccountName" value="esle sha" />
+    <add key="mailPassword" value="1234qwer12" />
+    <add key="mailHost" value="smtp.gmail.com" />
+    <add key="mailPort" value="587" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
