--- a/SISv3/Web.config
+++ b/SISv3/Web.config
@@ -10,8 +10,7 @@
   </configSections>
   <connectionStrings>
     
-    <add name="DefaultConnection" connectionString="Data Source=SISv3dB.mssql.somee.com;Initial Catalog=SISv3dB;User id=sisv3 ; Password=Aa@1234567;" providerName="System.Data.SqlClient" />
-  <add name="SISv3dBEntities" connectionString="metadata=res://*/Models.SISv3Model.csdl|res://*/Models.SISv3Model.ssdl|res://*/Models.SISv3Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SISv3dB.mssql.somee.com;initial catalog=SISv3dB;persist security info=True;user id=sisv3;password=Aa@1234567;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=SISv3dB.mssql.somee.com;Initial Catalog=SISv3dB;User id=sisv3 ; Password=Aa@1234567;" providerName="System.Data.SqlClient" /><add name="SISv3dBEntities" connectionString="metadata=res://*/Models.SISv3Model.csdl|res://*/Models.SISv3Model.ssdl|res://*/Models.SISv3Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SISv3dB.mssql.somee.com;initial catalog=SISv3dB;persist security info=True;user id=sisv3;password=Aa@1234567;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
