--- a/SISv3/SISv3.csproj
+++ b/SISv3/SISv3.csproj
@@ -171,6 +171,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AttendancePerDayController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -390,6 +391,11 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\Info.cshtml" />
+    <Content Include="Views\AttendancePerDay\Create.cshtml" />
+    <Content Include="Views\AttendancePerDay\Delete.cshtml" />
+    <Content Include="Views\AttendancePerDay\Details.cshtml" />
+    <Content Include="Views\AttendancePerDay\Edit.cshtml" />
+    <Content Include="Views\AttendancePerDay\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
